Mini-Kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
spec:
  selector:
    app: portfolio
  type: LoadBalancer
  externalIPs:
    - 192.168.100.247
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https  
      protocol: TCP
      port: 443
      targetPort: 443
